Adding retrocompatibility with java 8 to allow the project to be compiled on jitpack.io

--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -43,7 +43,7 @@ project.with {
 }
 // [crosscompile] source and target java version
 allprojects {
-	sourceCompatibility = '11.0.10'
+	sourceCompatibility = 8
 	targetCompatibility = sourceCompatibility
 }
 
