--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -65,7 +65,8 @@ dependencies {
 	// We use the awesome Spock testing and specification framework
 	testImplementation (
 		"org.spockframework:spock-core:$spockVersion",
-		'com.github.tomakehurst:wiremock:2.27.2'
+		'com.github.tomakehurst:wiremock:2.27.2',
+		'com.github.grational:specification-support:release-0.1.3'
 	)
 }
 
